--- a/gradle-jarmangit/build.gradle
+++ b/gradle-jarmangit/build.gradle
@@ -1,6 +1,30 @@
 apply plugin: 'groovy'
+apply plugin: 'maven'
+
+group = 'com.timgroup'
+version = '1.0.' + System.getenv('BUILD_NUMBER')
+
+repositories {
+    mavenLocal()
+    maven {
+        url "${repoUrl}/groups/public"
+    }
+}
 
 dependencies {
     compile gradleApi()
     compile localGroovy()
+    compile group: 'org.eclipse.jgit', name:'org.eclipse.jgit', version: '4.5.0.201609210915-r'
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: "${repoUrl}/repositories/yd-release-candidates") {
+                authentication(userName: project.repoUsername, password: project.repoPassword)
+            }
+        }
+    }
 }
