--- a/gradle-jarmangit/build.gradle
+++ b/gradle-jarmangit/build.gradle
@@ -14,7 +14,8 @@ repositories {
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    compile group: 'org.eclipse.jgit', name:'org.eclipse.jgit', version: '4.5.0.201609210915-r'
+    compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '4.5.0.201609210915-r'
+    compile group: 'org.apache.maven', name: 'maven-model', version: '2.2.1'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
