--- a/gradle-jarmangit/build.gradle
+++ b/gradle-jarmangit/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'groovy'
 apply plugin: 'maven'
+apply plugin: 'jarmangit'
 
 group = 'com.timgroup'
 version = '1.0.' + System.getenv('BUILD_NUMBER')
@@ -26,5 +27,17 @@ uploadArchives {
                 authentication(userName: project.repoUsername, password: project.repoPassword)
             }
         }
+    }
+}
+
+buildscript {
+    repositories {
+        maven {
+            url "${project.repoUrl}/groups/public"
+        }
+    }
+
+    dependencies {
+        classpath group: 'com.timgroup', name: 'gradle-jarmangit', version: "1.0.+"
     }
 }
