SteveH: support adding SCM information to POMs produced by maven-publish plugin on modern Gradle
This causes build problems, since Gradle 3 doesn't expose so much internal stuff for testing, and
the publishing extension has changed a lot since Gradle 1... separate the POM specific stuff into two
test files, and carefully compile the right one according to the running Gradle

--- a/gradle-jarmangit/build.gradle
+++ b/gradle-jarmangit/build.gradle
@@ -30,6 +30,17 @@ uploadArchives {
     }
 }
 
+compileTestGroovy {
+    if (gradle.gradleVersion.startsWith("1")) {
+        // old Gradle
+        exclude '**/ModernPomTest.groovy'
+    }
+    else {
+        // modern Gradle -- won't compile LegacyPomTest
+        exclude '**/LegacyPomTest.groovy'
+    }
+}
+
 buildscript {
     repositories {
         maven {
