--- a/gradle-jarmangit/build.gradle
+++ b/gradle-jarmangit/build.gradle
@@ -38,6 +38,6 @@ buildscript {
     }
 
     dependencies {
-        classpath group: 'com.timgroup', name: 'gradle-jarmangit', version: "1.0.20"
+    #    classpath group: 'com.timgroup', name: 'gradle-jarmangit', version: "1.0.20"
     }
 }
