Revert "tomd: those are not comments, apparently"
This reverts commit fab0b31bc7f8eaf09a494d139aee62c9f7037926.

--- a/gradle-jarmangit/build.gradle
+++ b/gradle-jarmangit/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'groovy'
 apply plugin: 'maven'
+#apply plugin: 'jarmangit'
 
 group = 'com.timgroup'
 version = '1.0.' + System.getenv('BUILD_NUMBER')
@@ -37,5 +38,6 @@ buildscript {
     }
 
     dependencies {
+    #    classpath group: 'com.timgroup', name: 'gradle-jarmangit', version: "1.0.20"
     }
 }
