--- a/gradle-jarmangit/build.gradle
+++ b/gradle-jarmangit/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'groovy'
 apply plugin: 'maven'
-#apply plugin: 'jarmangit'
+apply plugin: 'jarmangit'
 
 group = 'com.timgroup'
 version = '1.0.' + System.getenv('BUILD_NUMBER')
