SteveH: fix copy-pasta from autobumper build file

--- a/gradle-jarmangit/build.gradle
+++ b/gradle-jarmangit/build.gradle
@@ -15,7 +15,7 @@ repositories {
 
 gradlePlugin {
     plugins {
-        autobumper {
+        jarmangit {
             id = "com.timgroup.jarmangit"
             implementationClass = "com.timgroup.gradlejarmangit.GradleJarManGitPlugin"
         }
