SteveH: re-enable tail-consumption, specifying plugin repositories in settings.gradle
The plugins DSL does *not* allow for dynamic plugin version numbers

--- a/gradle-jarmangit/build.gradle
+++ b/gradle-jarmangit/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'groovy'
     id 'maven-publish'
     id 'java-gradle-plugin'
+    id 'com.timgroup.jarmangit' version '1.1.63'
 }
 
 group = 'com.timgroup'
