--- a/gradle-jarmangit/build.gradle
+++ b/gradle-jarmangit/build.gradle
@@ -35,6 +35,23 @@ publishing {
     }
 }
 
+model {
+    publishing {
+        publications {
+            pluginMaven {
+                artifact sourcesJar
+            }
+        }
+    }
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+assemble.dependsOn(sourcesJar)
+
 dependencies {
     compile gradleApi()
     compile localGroovy()
