--- a/gradle-jarmangit/build.gradle
+++ b/gradle-jarmangit/build.gradle
@@ -2,16 +2,15 @@ plugins {
     id 'groovy'
     id 'maven-publish'
     id 'java-gradle-plugin'
+    id "com.gradle.plugin-publish" version "0.9.9"
 }
 
 group = 'com.timgroup'
-version = '1.1.' + System.getenv('BUILD_NUMBER')
+if (System.getenv("BUILD_NUMBER")) version = '1.1.' + System.getenv('BUILD_NUMBER')
+description = "Get scm info into the MANIFEST.MF and pom.xml"
 
 repositories {
-    maven {
-        name "nexus"
-        url "${repoUrl}/groups/public"
-    }
+    mavenCentral()
 }
 
 gradlePlugin {
@@ -23,13 +22,28 @@ gradlePlugin {
     }
 }
 
+pluginBundle {
+    website = "https://github.com/tim-group/jar-man-git"
+    vcsUrl = "https://github.com/tim-group/jar-man-git"
+    description = project.description
+    plugins {
+        jarmangit {
+            id = "com.timgroup.jarmangit"
+            displayName = project.description
+            tags = ["git", "pom"]
+        }
+    }
+}
+
 publishing {
     repositories {
-        maven {
-            url "${project.repoUrl}/repositories/yd-release-candidates"
-            credentials {
-                username = project.repoUsername
-                password = project.repoPassword
+        if (project.hasProperty("repoUrl")) {
+            maven {
+                url "${project.repoUrl}/repositories/yd-release-candidates"
+                credentials {
+                    username = project.repoUsername
+                    password = project.repoPassword
+                }
             }
         }
     }
@@ -40,6 +54,7 @@ model {
         publications {
             pluginMaven {
                 artifact sourcesJar
+                artifact javadocJar
             }
         }
     }
@@ -52,10 +67,17 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 
 assemble.dependsOn(sourcesJar)
 
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+assemble.dependsOn(javadocJar)
+
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '4.5.0.201609210915-r'
+    compile "org.eclipse.jgit:org.eclipse.jgit:4.5.0.201609210915-r"
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile "junit:junit:4.12"
 }
