--- a/gradle-jarmangit/build.gradle
+++ b/gradle-jarmangit/build.gradle
@@ -13,6 +13,20 @@ repositories {
     mavenCentral()
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+    withSourcesJar()
+}
+
+dependencies {
+    implementation gradleApi()
+    implementation localGroovy()
+    implementation "org.eclipse.jgit:org.eclipse.jgit:4.5.0.201609210915-r"
+
+    testImplementation "junit:junit:4.12"
+}
+
 gradlePlugin {
     plugins {
         jarmangit {
@@ -47,37 +61,4 @@ publishing {
             }
         }
     }
-}
-
-model {
-    publishing {
-        publications {
-            pluginMaven {
-                artifact sourcesJar
-                artifact javadocJar
-            }
-        }
-    }
-}
-
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-
-assemble.dependsOn(sourcesJar)
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-
-assemble.dependsOn(javadocJar)
-
-dependencies {
-    compile gradleApi()
-    compile localGroovy()
-    compile "org.eclipse.jgit:org.eclipse.jgit:4.5.0.201609210915-r"
-
-    testCompile "junit:junit:4.12"
 }
