Specify Java 8 toolchain to build with

--- a/gradle-jarmangit/build.gradle
+++ b/gradle-jarmangit/build.gradle
@@ -8,14 +8,14 @@ def buildNumber = providers.environmentVariable("BUILD_NUMBER")
 if (buildNumber.present) version = "1.2.${buildNumber.get()}"
 description = "Get scm info into the MANIFEST.MF and pom.xml"
 
-repositories {
-    mavenCentral()
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(8)
+    }
 }
 
-java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
-    withSourcesJar()
+repositories {
+    mavenCentral()
 }
 
 dependencies {
